# Linkdin-scrapper

./: .env  data.csv  gitignore  linkedin-scrapper.py  linkedin_data_output.csv  pyproject.toml  readme.md  startup_data.py  startupweekly_march_2025.csv
